log
Fri 12 May 2023 02:10:22 AM UTC: 
 tests:  0|4
total_score: 0/70
d219d22
Fri 12 May 2023 02:19:53 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
8c312b3
Fri 12 May 2023 02:21:18 AM UTC: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c:31:7: error: redefinition of ‘heap_top’
   31 | void* heap_top(Heap* pq){
      |       ^~~~~~~~
heap.c:20:7: note: previous definition of ‘heap_top’ with type ‘void *(Heap *)’ {aka ‘void *(struct Heap *)’}
   20 | void* heap_top(Heap* pq){
      |       ^~~~~~~~
Compilation failed
3f809bd
Fri 12 May 2023 02:22:25 AM UTC: 
 heap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:36: error: stray ‘\302’ in program
   21 |   if (pq == NULL || pq->size == 0) ¿{
      |                                    ^
Compilation failed
29c0e68
Fri 12 May 2023 02:22:32 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
348ab6b
